//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id Int [pk, increment]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  avatar String
  role String [not null, default: 'user']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  conversations Conversation [not null]
  projects Project [not null]
  refreshToken RefreshToken [not null]
}

Table RefreshToken {
  token String [pk]
  accountId Int [not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  account Account [not null]
}

Table Conversation {
  id String [pk]
  accountId Int [not null]
  projectId String
  title String
  model String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  account Account [not null]
  project Project
  messages Message [not null]
}

Table Message {
  id String [pk]
  conversationId String [not null]
  role String [not null]
  content String [not null]
  reasoning String
  metadata String
  createdAt DateTime [default: `now()`, not null]
  conversation Conversation [not null]
  attachments MessageAttachment [not null]
}

Table MessageAttachment {
  id String [pk]
  messageId String [not null]
  fileUrl String [not null]
  fileName String [not null]
  fileType String [not null]
  fileSize Int [not null]
  createdAt DateTime [default: `now()`, not null]
  message Message [not null]
}

Table Project {
  id String [pk]
  accountId Int [not null]
  name String [not null]
  description String
  lastOpenedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  account Account [not null]
  conversations Conversation [not null]
}

Ref: RefreshToken.accountId > Account.id [delete: Cascade]

Ref: Conversation.accountId > Account.id [delete: Cascade]

Ref: Conversation.projectId > Project.id [delete: Set Null]

Ref: Message.conversationId > Conversation.id [delete: Cascade]

Ref: MessageAttachment.messageId > Message.id [delete: Cascade]

Ref: Project.accountId > Account.id [delete: Cascade]